<resources>
  <string name="app_name">mcOptCal</string>
  <string name="bs">BS</string>
  <string name="asian">ASIAN</string>
  <string name="lsm">LSM</string>
  <string name="ok">OK</string>
  <string name="cancel">CANCEL</string>
  <string name="parameters">PARAMETERS</string>
  <string name="copy">COPY</string>
  <string name="settings">SETTINGS</string>
  <string name="help">HELP</string>
  <string name="clr">CLR</string>

  <string name="payofffn">Payoff Function</string>
  <string name="call_put">Call / Put</string>
  <string name="call">Call</string>
  <string name="put">Put</string>
  <string name="stock_price_avgstock_price">(Expiry Price: S, Arithmetic Average: SAVG)</string>
  <string name="stock_price_t">Expiry Price (S)</string>
  <string name="stock_price_t_val">* MC Simulation *</string>
  <string name="avgstock_price">Arithmetic Average (SAVG)</string>
  <string name="avgstock_price_val">* MC Simulation *</string>
  <string name="stock_price">Current Price (S0)</string>
  <string name="exercise_price">Exercise Price (K)</string>
  <string name="risk_free_rate">Annual Risk Free Rate (R)</string>
  <string name="volatility">Volatility \u03C3 (V)</string>
  <string name="time_to_expiration">Years to Expiry (T)</string>
  <string name="numpaths">numPaths</string>
  <string name="numsteps">numSteps</string>
  <string name="numsamples">numSamples</string>
  <string name="threshold">Threshold</string>
  <string name="uiupdateinterval">uiUpdateInterval</string>
  <string name="scala_jni">Scala/JNI (Asian only)</string>
  <string name="scala">Scala</string>
  <string name="jni">JNI</string>
  <string name="rng_seed">PRNG Seed</string>
  <string name="genRngSeed">Generate Seed</string>

<string name="help_content">
\nmcOptCal\n
Calculate the prices of American / Bermudan options using the LSM (Least Squares Monte Carlo) method, Asian options by Monte Carlo simulation and European options by the Black Scholes formula. The option payoff function and pseudo random number generator seed are user-definable and an android service is used to enable calculations to continue in the background while other activities are in the foreground.\n
Note: if the Monte Carlo simulation parameters are set too large, the device responsiveness may slow down while the calculation is running.\n
\n
Web:    http://dragongate-technologies.com \n
Source: https://github.com/amulcahy/mcOptCal \n
\n
v1.04 - Change to an internal pseudo random number generator, add the ability to set the PRNG seed, add an option use use JNI code for Asian Option calculations.\n
\n
BS\n
Input the option parameters and calculate the value of a European option using the Black Scholes formula.
\n
ASIAN\n
Input the option parameters and calculate the value of an Asian option by Monte Carlo simulation.\n
\n
LSM\n
Input the option parameters and calculate the value of an American/Bermudan option using the Least Squares Monte Carlo method.\n
\n
Option PARAMETERS\n
Payoff Function: eg.  K-S  (Put Option),  S-K  (Call Option), SAVG-K (Asian Call Option)\n
Expiry Price (S): calculated by MC Simulation.\n
Arithmetic Average (SAVG): calculated by MC Simulation.\n
Current Price (S0)\n
Exercise Price (K)\n
Annual Risk Free Rate (R)\n
Volatility \u03C3 (V)\n
Years to Expiry (T)\n
numPaths: The number of Monte Carlo simulation paths. Too large a value may slow down the device response.\n
numSteps: The number of exercise steps per year.\n
PRNG Seed: The pseudo random number generator seed.\n
Generate Seed: Generate a random  seed for the pseudo random number generator.\n
Scala/JNI: Select the Scala version or JNI version of the option pricing code. (the current JNI implementation only includes Asian option support)\n
\n
COPY\n
Copy the output window contents to the clipboard.\n
\n
SETTINGS\n
Adjust various settings.\n
numSamples: The number of paths to display on the graph. Too large a value may cause errors.\n
Threshold: Objects larger than this size are cached on the SD card. The optimum value is dependent on device memory. Too large a number may cause out of memory errors.\n
uiUpdateInterval: The interval between UI updates during MC calculations.\n
\n
CLR\n
Clear the output window.\n
\n
CANCEL\n
Cancel a running LSM calculation.\n
\n
HELP\n
This help menu.\n
\n
</string>

<string name="copy_content">Copied output to clipboard\n</string>
</resources>
