<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  <ScrollView 
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fastScrollEnabled="false" 
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    >
    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:shrinkColumns="*"
      android:stretchColumns="*"
      >
      <TableRow
	>
	<TextView
	  android:id="@+id/textview_payofffn"
	  android:text="@string/payofffn"
	  android:textSize="12sp"
	  android:layout_span="1"
	  />
	<EditText 
	  android:id="@+id/edittext_payofffn" 
	  android:inputType="textCapCharacters"
	  android:text="strike-mcPrice" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview_s"
	  android:text="@string/stock_price_avgstock_price"
	  android:textSize="12sp"
	  android:layout_span="2" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview3"
	  android:text="@string/stock_price"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext1" 
	  android:inputType="numberDecimal"
	  android:text="164.0" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview4"
	  android:text="@string/exercise_price"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext2" 
	  android:inputType="numberDecimal"
	  android:text="165.0" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview5"
	  android:text="@string/risk_free_rate"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext3" 
	  android:inputType="numberDecimal"
	  android:text="0.0521" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview6"
	  android:text="@string/volatility"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext4" 
	  android:inputType="numberDecimal"
	  android:text="0.29" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview7"
	  android:text="@string/time_to_expiration"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext5" 
	  android:inputType="numberDecimal"
	  android:text="0.0959" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:text="@string/numpaths"
	  android:layout_span="1" 
	  android:textSize="12sp"
	  />
	<EditText 
	  android:id="@+id/editTextNumPaths" 
	  android:inputType="number"
	  android:text="10000" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview8"
	  android:text="@string/numsteps"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext6" 
	  android:inputType="number"
	  android:text="30" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textviewRngSeed"
	  android:text="@string/rng_seed"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittextRngSeed" 
	  android:inputType="number"
	  android:text="1.0" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:text=""
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<Button 
	  android:id="@+id/btnGenRngSeed" 
	  android:text="@string/genRngSeed"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  android:padding="0dp"
	  android:layout_margin="0dp"
	  android:layout_height="30dp"
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:text="@string/scala_jni"
	  android:textSize="12sp"
	  android:layout_span="1"
	  />
	<RadioGroup android:id="@+id/radiogroup_sj" 
	  android:orientation="horizontal"
	  android:layout_span="1" 
	  >
	  <RadioButton android:id="@+id/radioBtnScala"
	    android:text="@string/scala" 
	    android:textSize="12sp"
	    android:checked="true" 
	    />
	  <RadioButton android:id="@+id/radioBtnJNI"
	    android:text="@string/jni" 
	    android:textSize="12sp"
	    />
	</RadioGroup>
      </TableRow>
    </TableLayout>
  </ScrollView>
</LinearLayout>

