<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  <ScrollView 
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:fastScrollEnabled="false" 
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:fadeScrollbars="false"
    >
    <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:shrinkColumns="*"
      android:stretchColumns="*"
      >
      <TableRow
	>
	<TextView
	  android:id="@+id/textview3"
	  android:text="@string/stock_price"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext1" 
	  android:inputType="numberDecimal"
	  android:text="164.0" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview4"
	  android:text="@string/exercise_price"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext2" 
	  android:inputType="numberDecimal"
	  android:text="165.0" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview5"
	  android:text="@string/risk_free_rate"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext3" 
	  android:inputType="numberDecimal"
	  android:text="0.0521" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview6"
	  android:text="@string/volatility"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext4" 
	  android:inputType="numberDecimal"
	  android:text="0.29" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
      <TableRow
	>
	<TextView
	  android:id="@+id/textview7"
	  android:text="@string/time_to_expiration"
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
	<EditText 
	  android:id="@+id/edittext5" 
	  android:inputType="numberDecimal"
	  android:text="0.0959" 
	  android:textSize="12sp"
	  android:layout_span="1" 
	  />
      </TableRow>
    </TableLayout>
  </ScrollView>
</LinearLayout>

